Chaged sot that index worked correctly

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<table class = menu>
 		<!-- <ol class=menu> -->
 			<tr class = top>
-				<th class = click><a href="Homepage.html"><h3 class = pages> Home</h3></a></th>
+				<th class = click><a href="index.html"><h3 class = pages> Home</h3></a></th>
 				<th class = click><a href="Psych Page.html"><h3 class = pages> Psych!</h3></a></th>
 			<!-- </li> </a> -->
 			<!-- <li class=menu> -->
