--- a/The West Wing Page.html
+++ b/The West Wing Page.html
@@ -15,7 +15,7 @@
 		<table class = menu>
 			<ol class=menu>
 			<tr class = top>
-				<th class = click><a href="Index.html"><h3 class = pages> Home</h3></a></th>
+				<th class = click><a href="index.html"><h3 class = pages> Home</h3></a></th>
 				<tr><th class = click><a href="Psych Page.html"><h3 class = pages> Psych!</h3></a></th></tr>
 			<!-- </li> </a> -->
 			<!-- <li class=menu> -->
