--- a/Chuck Page.html
+++ b/Chuck Page.html
@@ -15,14 +15,14 @@
 		<table class = menu>
 			<ol class=menu>
 			<tr class = top>
-				<th class = click><a href="index.html"><h3 class = pages> Home</h3></a></th>
-				<tr><th class = click><a href="Psych Page.html"><h3 class = pages> Psych!</h3></a></th></tr>
+				<th class = click><a href="curtisSalinger.github.io"><h3 class = pages> Home</h3></a></th>
+				<tr><th class = click><a href="curtisSalinger.github.io/Psych%20Page.html"><h3 class = pages> Psych!</h3></a></th></tr>
 			<!-- </li> </a> -->
 			<!-- <li class=menu> -->
-				<tr><th class = click><a href="Chuck Page.html"><h3 class = pages>Chuck </h3><a></th></tr>
+				<tr><th class = click><a href="curtisSalinger.github.io/Chuck%20Page.html"><h3 class = pages>Chuck </h3><a></th></tr>
 			<!-- </li>
 			<li class=menu> -->
-				<tr><th class = click><a href="The West Wing Page.html"><h3 class = pages>The West Wing</h3></a></th></tr>
+				<tr><th class = click><a href="curtisSalinger.github.io/the%20west%20wing%20page.html"><h3 class = pages>The West Wing</h3></a></th></tr>
 			<!-- </li>
 			<li class= menu> -->
 			<!-- </li> -->
