Update The West Wing Page.html

--- a/The West Wing Page.html
+++ b/The West Wing Page.html
@@ -49,6 +49,7 @@
 	</p>
 	<a href="www.henryaschulz.github.io"><p class = link>Click to read more</p></a>
 
+is this updating
 
 <h2>List of Important Characters:</h2>
 
