Update The West Wing Page.html

--- a/The West Wing Page.html
+++ b/The West Wing Page.html
@@ -47,7 +47,7 @@
 	<p>
 		<span class = "intro">Click the link below to read all about The West Wing from CS_40's very own Henry Schultz</span>
 	</p>
-	<a href="www.henryaschulz.github.io"><p class = link>Click to read more</p></a>
+	<a href="henryaschulz.github.io"><p class = link>Click to read more</p></a>
 
 is this updating
 
