--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		Curtis's Recommended TV Shows
 	</title>
 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>
 	
 	<h1>
 		Curtis's Recommended TV Shows
@@ -48,4 +50,7 @@
 	
 <a href="https://github.com/mikeizbicki/cmc-csci040">CS_40 Course Webpage</a>
 <a href="https://izbicki.me"> Mike Izbicki's Website</a>
+<div class="fb-like" data-href="https://www.facebook.com/groups/TVseriesShowsMovies/" data-width="50" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+
+<p>Updated</p>
 	</body>
