--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <link rel="stylesheet" href="CSSWeb.CSS">
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128291769-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128291769-2');
+</script>
+
 	<meta name="description" content="This is the home page of Curtis's website in which he tells you about 3 shows he thinks you should watch.">
 	<title>
 		Curtis's Recommended TV Shows
