--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </script>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>
-<div class="fb-like" data-href="https://www.facebook.com/groups/TVseriesShowsMovies/" data-width="50" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+<div class="fb-like" data-href="https://www.facebook.com/tvinsider/" data-width="50" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 
 	<meta name="description" content="This is the home page of Curtis's website in which he tells you about 3 shows he thinks you should watch.">
 	<title>
