--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
 <a href="https://github.com/mikeizbicki/cmc-csci040">CS_40 Course Webpage</a>
 <a href="https://izbicki.me"> Mike Izbicki's Website</a>
 
-<p> updated</p>
+<p> chcanged</p>
 
 	</body>
