--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
 <p> <span class = intro> Hello!</span>  My name is Curtis Salinger. I have grown up in the era of streaming service and as such I've watched my fair share of TV. Given that there is a lot of garbage out, I've made this website of 3 shows that I think are worth watching!
 </p>
+
+<p>If TV is not your thing but basketball is, check out J.D. Levine's Basketball page <a href="https://jcmd7.github.io/">HERE</a></p>
 	
 <a href="https://github.com/mikeizbicki/cmc-csci040">CS_40 Course Webpage</a>
 <a href="https://izbicki.me"> Mike Izbicki's Website</a>
