--- a/Chuck Page.html
+++ b/Chuck Page.html
@@ -3,6 +3,13 @@
 
 <link rel="stylesheet" href="CSSWeb.CSS">
 <head>
+	<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128291769-2');
+</script>
 	<meta name="description" content="This will give you Curtis's breakdown of Chuck.">
 	<title>
 		Chuck
