--- a/Psych Page.html
+++ b/Psych Page.html
@@ -5,6 +5,13 @@
 
 
 <head>
+	<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128291769-2');
+</script>
 	<meta name="description" content="This will give you Curtis's breakdown of Psych!.">
 	<title>
 		Psych!
