--- a/Chuck Page.html
+++ b/Chuck Page.html
@@ -14,9 +14,12 @@
 	<title>
 		Chuck
 	</title>
+	
+<h1 class="HeaderImage">
 	<div class = headerImage>
 	<img src="https://borgdotcom.files.wordpress.com/2012/01/chuck-banner.jpg">
 </div>
+</h1>
 
 	<div class=menuOnPages>
 		<table class = menu>
