--- a/Psych Page.html
+++ b/Psych Page.html
@@ -18,7 +18,7 @@
 	</title>
 	
 
-<h1>
+<h1 class="HeaderImage">
 	<div class = headerImage>
 	<img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Psych_logo.jpg">
 </div>
