--- a/Chuck Page.html
+++ b/Chuck Page.html
@@ -17,7 +17,7 @@
 	
 <h1 class="HeaderImage">
 	<div class = headerImage>
-	<img src="https://borgdotcom.files.wordpress.com/2012/01/chuck-banner.jpg">
+	<img src="https://borgdotcom.files.wordpress.com/2012/01/chuck-banner.jpg" alt="Chuck">
 </div>
 </h1>
 
