--- a/Psych Page.html
+++ b/Psych Page.html
@@ -20,7 +20,7 @@
 
 <h1 class="HeaderImage">
 	<div class = headerImage>
-	<img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Psych_logo.jpg">
+	<img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Psych_logo.jpg" alt="Psych">
 </div>
 </h1>
 
